<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/spiderman_its" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="20sp"
            android:fontFamily="@font/PoppinsSemiBold"
            android:textColor="@color/black"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/tv_movie_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/PoppinsMedium"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_movie_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_movie_name"
            tools:text="@string/movie_year" />

        <TextView
            android:id="@+id/tv_movie_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/PoppinsMedium"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_movie_year"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_movie_name"
            tools:text="@string/movie_country" />

        <TextView
            android:id="@+id/tv_movie_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/PoppinsMedium"
            android:textSize="14sp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_movie_name"
            card_view:layout_constraintStart_toEndOf="@+id/tv_movie_country"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_movie_name"
            tools:text="@string/movie_duration" />

        <TextView
            android:id="@+id/tv_movie_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:fontFamily="@font/poppins"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_movie_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_movie_year"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_movie_duration"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>